tests/files/valid/with_imports.ys
import Employee from "base.ys"
import User from "base.ys"

schema {
    employees list(Employee)
}
