tests/files/invalid_files/cycles/self_cycle.ys
import Test from "self_cycle.ys"

ruleset Test {
    data str
    number int
}

schema {
    test Test optional
}